[package]
name = "warpper_schnorr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "warpper_schnorr"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.22.0"
bs58 = "0.5.0"
schnorrkel = "0.11.4"
anyhow = "1.0.75"
