[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "warpper_schnorr"
version = "0.1.1"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
url = "https://github.com/qubaitian/warpper_schnorr"

[tool.maturin]
features = ["pyo3/extension-module"]
